full_test/testcases/step10/global_not_initialized.err
Syntax error: line 1, column 8
int foo;
Syntax error: line 3, column 1
int main() {
Syntax error: line 3, column 5
int main() {
